# NAT_Penetrate

./: CMakeLists.txt
NAT_A/: CMakeLists.txt  mian.cpp  mian.h
NAT_B/: CMakeLists.txt  main.cpp  main.h
Server/: CMakeLists.txt  main.cpp
